# configd

./: Cargo.toml  LICENSE  README.md  configd.go  go.mod  go.sum
_example/template/: config.tpl  main.go
_example/validate/: main.go
src/: main.rs
