[package]
name = "configd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
zbus = { version = "5.14.0" }
zvariant = { version = "5" }

[[bin]]
name = "config-service"
path = "src/bin/config_service.rs"
